--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "directories": {
     "test": "tests"
   },
+  "engines": {
+    "node": "10.19.0"
+  },
   "scripts": {
     "test": "mocha tests",
     "start": "node index.js"
