--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "lint": "eslint . --ext .js",
-    "test": "nyc mocha tests",
+    "test": "mocha tests && npm run lint",
     "start": "node index.js"
   },
   "pre-push": [
