--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es6": true
+        "es6": true,
+        "mocha": true
     },
     "extends": [
         "airbnb-base"
@@ -19,10 +20,8 @@
             "error",
             "always"
         ],
-        "max-len": [
-            1,
-            150,
-            200
-        ]
+        "max-len": "off",
+        "consistent-return":"off",
+        "no-shadow":"off"
     }
 }
