--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
         "max-len": "off",
         "consistent-return":"off",
         "no-shadow":"off",
-        "func-names": "off"
+        "func-names": "off",
+        "no-param-reassign":"off",
+        "prefer-destructuring":"off"
     }
 }
