refactoring: separate logic from controller

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
         "no-shadow":"off",
         "func-names": "off",
         "no-param-reassign":"off",
-        "prefer-destructuring":"off"
+        "prefer-destructuring":"off",
+        "no-unused-expressions": "off"
     }
 }
