--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "lint": "eslint . --ext .js",
     "test": "nyc mocha tests && npm run lint",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "pre-push": [
     "test"
